fix(demo): Fixed bugs for demo
